--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -237,7 +237,9 @@
 
 
 /*********CHILD DASHBOARD******/
-
+.childDashboard {
+	height: 500px;
+}
 .childDashboard h1 {
 	font-size: 40px;
 	color: #061283;
@@ -286,7 +288,6 @@
 	text-align: center;
 	padding: 20px;
 }
-
 
 .householdChores h2 {
 	color: #061283;
