changed mobile width of child dashboard

--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -267,10 +267,10 @@
 .childChores {
 	text-align: center;
 	height: 300px;
-	width: 400px;
+	width: 91.66%;
 	border: .5px solid #D3D3D3;
 	box-shadow: 5px 5px 5px 5px #D3D3D3;
-	margin: 50px auto;
+	margin: 4.17%;
 	font-size: 18px;
 }
 
