added Header component to login/signup pages and added title to nav

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -59,6 +59,14 @@ body {
 	text-decoration: none;
 }
 
+.nav-bar p {
+	margin: 10px;
+	float: left;
+	color: #FFF;
+	font-family: 'Comfortaa', cursive;
+	font-size: 30px;
+}
+
 .summary h1 {
 	text-align: center;
 	margin: 200px auto;
