--- a/src/CSS/login.css
+++ b/src/CSS/login.css
@@ -1,4 +1,4 @@
-.form {
+/*.form {
   text-align:center;
   font-family: 'Raleway', sans-serif;
   background-color: white;
@@ -124,3 +124,4 @@
   opacity: 0.8;
   cursor: pointer;
 }
+*/
