--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -236,8 +236,9 @@
 }
 
 .assignTask select, 
-.assignTask .submit-form,
-.addUser .submit-form {
+.assignTask .submit-form,.btn,
+.addUser .submit-form,
+ {
   width: 200px;
   border-color: lightgray;
   font-size: 16px;
@@ -273,7 +274,7 @@
 }
 
 .assignTask .submit-form,
-.addUser .submit-form {
+.addUser .submit-form, .btn {
 	background-color: #f76c6c;
 	color: white;
 	font-weight: bold;
