--- a/src/CSS/homepage.css
+++ b/src/CSS/homepage.css
@@ -18,11 +18,12 @@
 .header h1 {
     color: #f76c6c;
     font-size: 40px;
-    margin-top: 0;
+    margin: 0;
+    padding-top: 40px;
 }
 
 .header2 img {
-  width: 100px;
+  width: 150px;
 }
 
 .header1 p {
@@ -30,6 +31,7 @@
   font-size: 20px;
   color: #fff;
   font-weight: bold;
+  padding-left: 10px;
 }
 
 .header2 {
