--- a/src/CSS/homepage.css
+++ b/src/CSS/homepage.css
@@ -28,7 +28,7 @@
 
 .header1 p {
   margin: 50px auto;
-  font-size: 20px;
+  font-size: 25px;
   color: #fff;
   font-weight: bold;
   padding-left: 10px;
@@ -69,19 +69,24 @@ main {
   width: 91.66%;
   float: left;
   text-align: center;
-  margin: 0 4.17%;
+  margin: 0 4.17% 50px 4.17%;
   border-bottom: 1px solid #d4d4d4;
+}
+
+.section2 p {
+  font-size: 25px;
 }
 
 .section2 h2 {
   color: #374785;
-  font-size: 35px;
-  margin-top: 60px;
+  font-size: 50px;
+  margin-top: 30px;
 }
 
 h4 {
   color: #24305e;
-  font-size: 25px;
+  font-size: 30px;
+  text-align: left;
 }
 
 .info ul {
@@ -100,16 +105,21 @@ form {
   margin-top: 50px;
 }
 
-form input {
+#sign-up input,
+#login input {
   display: block;
   margin: 30px auto;
   border: none;
   border-bottom: 1px solid #d4d4d4;
-  width: 3dfsdfs00px;
+  width: 350px;
   font-size: 18px;
   height: 30px;
   padding: 5px;
   color: #374785;
+}
+
+.btn {
+  width: 400px;
 }
 
 #login {
