--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -53,7 +53,7 @@
 	position: relative;
 	display: inline-block;
 	width: 41.66%;
-	padding: 5px;
+	padding: 20px;
 	overflow: hidden;
 }
 
@@ -397,6 +397,10 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
+input.submit-form:hover, 
+input.btn:hover{
+    cursor: pointer;
+}
 
 
 /*blue: #061283
