--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -144,7 +144,7 @@
 	display: block;
 	margin: 15px auto;
 	font-size: 20px;
-	width: 300px;
+	width: 91.66%;
 	border: none;
 	border-bottom: 1px solid #D3D3D3;
 	padding: 5px;
@@ -352,8 +352,8 @@
 }
 
 .householdChores {
-	width: 60%;
-	margin: 20px auto;
+	width: 91.66%;
+	margin: 20px 4.17%;
 	text-align: center;
 	padding: 20px;
 }
