--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -24,6 +24,7 @@
 	  width: 91.66%;
 	  height: 250px;
 	  margin: 20px 4.17% 0 4.17%;
+	  padding-left: 100px;
 	}
 
 	.section2 {
@@ -77,13 +78,15 @@
 	.assignTask,
 	.addUser,
 	.childChores {
-		max-width: 40%;
+		max-width: 30%;
 		margin: 50px auto;
 	}
 
-	.householdChores{
-		max-width: 35%;
-		font-size: 20px;
+	.householdChores {
+		width: 40%;
+		margin: 20px auto;
+		text-align: center;
+		padding: 20px;
 	}
 
 	.householdChores table tr th{
@@ -102,5 +105,26 @@
 	.summary h1 {
 		font-size: 60px;
 	}
+
+	#sign-up input,
+	#login input {
+	  width: 400px;
+	}
+
+	#sign-up .btn,
+	#login .btn {
+	  width: 400px;
+	}
+
+#addChores .addChoreField,
+.addUser .addUserField {
+	display: block;
+	margin: 15px auto;
+	font-size: 20px;
+	width: 300px;
+	border: none;
+	border-bottom: 1px solid #D3D3D3;
+	padding: 5px;
+}
 
 }
