--- a/src/CSS/homepage.css
+++ b/src/CSS/homepage.css
@@ -61,7 +61,7 @@ main {
 
 .section1 h3 {
   color: #f76c6c;
-  font-size: 60px;
+  font-size: 45px;
   font-weight: normal;
 }
 
@@ -132,7 +132,8 @@ form {
 }
 
 #sign-up .btn,
-#login .btn {
+#login .btn,
+.message .btn {
   background-color: #f76c6c;
   color: white;
   font-weight: bold;
@@ -140,6 +141,7 @@ form {
   width: 300px;
   height: 50px;
   font-size: 20px;
+  border-radius: 10px;
 }
 
 a:hover,
