--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -223,10 +223,18 @@
 }
 
 .account-message {
+	width: 91.66%;
 	text-align: center;
 	font-size: 20px;
-	height: 200px;
-	margin-top: 60px;
+	margin: 60px 4.17%;
+}
+
+.account-message p {
+	font-weight: bold;
+	color: #24305e;
+	width: 100%;
+	text-align: center;
+
 }
 
 .parentDashboard .pointValue {
@@ -239,7 +247,7 @@
 	margin: 8.34%;
 	text-align: center;
 	padding: 10px;
- 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2);
+ 	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .assignTask .submit-form,
@@ -257,7 +265,7 @@
 .assignTask select {
 	display: block;
 	margin: 20px auto;
-	width: 300px;
+	width: 91.66%;
 	font-size: 20px;
 }
 
@@ -285,7 +293,7 @@
 }
 
 .assignTask .submit-form,
-.addUser .submit-form, .btn {
+.addUser .submit-form {
 	background-color: #f76c6c;
 	color: white;
 	font-weight: bold;
