--- a/src/CSS/profile.css
+++ b/src/CSS/profile.css
@@ -298,8 +298,9 @@
 	color: white;
 	font-weight: bold;
 	border: none;
-	width: 300px;
+	width: 91.66%;
 	font-size: 20px;
+	margin: 4.17%;
 }
 
 .message {
