--- a/src/CSS/homepage.css
+++ b/src/CSS/homepage.css
@@ -2,9 +2,18 @@
 .header{
   background: linear-gradient(to bottom right, #24305e, #a8d0e6);
   /* background-color: #24305e; */
-  width: 100%;
-  height: 400px;
-  text-align: center;
+    background-image:
+    linear-gradient(
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2)
+    ),
+/*    url(https://images.unsplash.com/photo-1506485338023-6ce5f36692df?dpr=1&auto=compress,format&fit=crop&w=1050&h=&q=80&cs=tinysrgb&crop=);*/
+    url(https://images.pexels.com/photos/139764/pexels-photo-139764.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;   
+    height: 600px;
+    text-align: center;
 }
 
 .header1 {
@@ -17,9 +26,10 @@
 
 .header h1 {
     color: #f76c6c;
-    font-size: 40px;
+    font-size: 60px;
     margin: 0;
     padding-top: 40px;
+    font-family: 'Kavivanar', san-serif;
 }
 
 .header2 img {
@@ -79,8 +89,9 @@ main {
 
 .section2 h2 {
   color: #374785;
-  font-size: 50px;
+  font-size: 45px;
   margin-top: 30px;
+  font-weight: normal;
 }
 
 .section2 ul {
@@ -152,6 +163,7 @@ a:visited {
 
 #login {
   display: none;
+  position: relative;
 }
 
 .link {
@@ -161,4 +173,29 @@ a:visited {
 
 .link:hover{
   cursor: pointer;
+}
+
+.overlay {
+  background-color: rgba(0,0,0,0.1);
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  z-index: 50;
+}
+
+.loader {
+    border: 10px solid #f76c6c; /* Light grey */
+    border-top: 10px solid #f3f3f3; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
